--- a/index.html
+++ b/index.html
@@ -1,7 +1,38 @@
 <!DOCTYPE html>
+<head>
+    <script src="https://cdn.logwork.com/widget/countdown.js"></script>
+<style>
+body {
+    background-image: url('path-to-your-uploaded-image');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+}
+
+.countdown-timer {
+    display: block;
+    text-align: center;
+    font-size: 2em;
+    color: white;
+    text-shadow: 2px 2px 4px rgba(0,0,0,0.8);
+    margin: 50px auto;
+    padding: 20px;
+    background: rgba(0,0,0,0.5);
+    border-radius: 10px;
+    max-width: 400px;
+    text-decoration: none;
+}
+
+.countdown-timer:hover {
+    background: rgba(0,0,0,0.7);
+}
+</style>
+</head>
 <html>
 <body>
 <h1>AGENT c4z4</h1>
+<a href="https://logwork.com/countdown-timer" class="countdown-timer" data-timezone="Europe/Athens" data-date="2025-06-19 09:00">Countdown Timer</a>
 <p>tHE cz AGENT.</p>
 </body>
 </html>
