--- a/index.html
+++ b/index.html
@@ -1,38 +1,84 @@
 <!DOCTYPE html>
+<html>
 <head>
     <script src="https://cdn.logwork.com/widget/countdown.js"></script>
-<style>
-body {
-    background-image: url('path-to-your-uploaded-image');
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-}
+    <style>
+        body {
+            margin: 0;
+            padding: 20px;
+            font-family: Arial, sans-serif;
+            overflow-x: hidden;
+        }
 
-.countdown-timer {
-    display: block;
-    text-align: center;
-    font-size: 2em;
-    color: white;
-    text-shadow: 2px 2px 4px rgba(0,0,0,0.8);
-    margin: 50px auto;
-    padding: 20px;
-    background: rgba(0,0,0,0.5);
-    border-radius: 10px;
-    max-width: 400px;
-    text-decoration: none;
-}
+        /* Video Background */
+        .video-background {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: -1;
+            object-fit: cover;
+        }
 
-.countdown-timer:hover {
-    background: rgba(0,0,0,0.7);
-}
-</style>
+        /* Content overlay */
+        .content {
+            position: relative;
+            z-index: 1;
+            text-align: center;
+            padding-top: 50px;
+        }
+
+        h1 {
+            color: white;
+            text-shadow: 3px 3px 6px rgba(0,0,0,0.9);
+            font-size: 3em;
+            margin-bottom: 30px;
+            font-weight: bold;
+        }
+
+        p {
+            color: white;
+            text-shadow: 2px 2px 4px rgba(0,0,0,0.8);
+            font-size: 1.2em;
+            margin-top: 30px;
+        }
+
+        .countdown-timer {
+            display: block;
+            text-align: center;
+            font-size: 2em;
+            color: white;
+            text-shadow: 2px 2px 4px rgba(0,0,0,0.8);
+            margin: 50px auto;
+            padding: 20px;
+            background: rgba(0,0,0,0.6);
+            border-radius: 15px;
+            max-width: 400px;
+            text-decoration: none;
+            border: 2px solid rgba(255,255,255,0.3);
+            transition: all 0.3s ease;
+        }
+
+        .countdown-timer:hover {
+            background: rgba(0,0,0,0.8);
+            border-color: rgba(255,255,255,0.5);
+            transform: scale(1.05);
+        }
+    </style>
 </head>
-<html>
 <body>
-<h1>AGENT c4z4</h1>
-<a href="https://logwork.com/countdown-timer" class="countdown-timer" data-timezone="Europe/Athens" data-date="2025-06-19 09:00">Countdown Timer</a>
-<p>tHE cz AGENT.</p>
+    <!-- Video Background -->
+    <video class="video-background" autoplay muted loop>
+        <source src="timer.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
+
+    <!-- Content -->
+    <div class="content">
+        <h1>AGENT c4z4</h1>
+        <a href="https://logwork.com/countdown-timer" class="countdown-timer" data-timezone="Europe/Athens" data-date="2025-06-19 09:00">Countdown Timer</a>
+        <p>tHE cz AGENT.</p>
+    </div>
 </body>
 </html>
