--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
         @keyframes float {
             0%, 100% { transform: translateY(0px) rotate(0deg); opacity: 0.3; }
-            50% { transform: translateY(-20px) rotate(180deg); opacity: 0.8; }
+            50% { transform: translateY(-30px) rotate(180deg); opacity: 0.8; }
         }
 
         /* Main Container - 20% Transparent */
@@ -283,7 +283,7 @@
 
     <!-- Main Timer Container -->
     <div class="timer-container">
-        <h1 class="title">AGENT C4Z4</h1>
+        <h1 class="title">Terminal tech countdown</h1>
         
         <!-- Digital Timer Display -->
         <div class="digital-timer">
@@ -336,7 +336,7 @@
 
         <!-- Target Information -->
         <div class="target-info">
-            🎯 Mission Target: June 19, 2025 - 09:00 Athens Time
+            🎯 Mission Target: June 19, 2025 - 07:00 UK Time
         </div>
     </div>
 
